--- a/main.scss
+++ b/main.scss
@@ -1,3 +1,9 @@
+/****************************************************************************
+ * Created by goldwin.japar (https://goldwin.now.sh)
+ * Copyright 2022 | Onboarding Blibli Kampus Merdeka & Binus 3+1
+ * For Educational Purpose
+ ****************************************************************************/
+
 @font-face {
   font-display: fallback;
   font-family: 'effra';
