--- a/main.scss
+++ b/main.scss
@@ -20,6 +20,8 @@
 
 $blue: #0095da;
 $grey: #f1f1f1;
+$white: #fff;
+$black: #000;
 $box-shadow: 0 0 16px -4px rgba(0, 0, 0, 0.12);
 
 * {
@@ -59,7 +61,7 @@ nav {
   justify-content: flex-start;
   width: 520px;
   min-height: 600px;
-  background: #fff;
+  background: $white;
   text-align: center;
   margin: 64px auto;
   border-radius: 24px;
@@ -89,7 +91,7 @@ h1 {
   outline: none;
   width: 320px;
   background: transparent;
-  color: #000;
+  color: $black;
 }
 
 .todo-input::placeholder {
@@ -107,7 +109,7 @@ h1 {
                   $blue 0%,
                   #0eb3ff 100%
   );
-  color: #fff;
+  color: $white;
   text-transform: capitalize;
 }
 
@@ -135,7 +137,7 @@ h1 {
   justify-content: space-between;
   align-items: center;
   margin: 4px auto;
-  color: #fff;
+  color: $white;
   background: linear-gradient(
                   90deg,
                   #f7931e 0%,
@@ -180,9 +182,9 @@ h1 {
 
 .delete-icon {
   margin-right: 5px;
-  color: #fff;
+  color: $white;
 }
 
 .edit-icon {
-  color: #fff;
+  color: $white;
 }
